# lightrag-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/lightrag_fastmcp_bridge/: __init__.py  client.py  server.py
