[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-fastmcp-bridge"
version = "0.1.0"
description = "FastMCP bridge for LightRAG Server API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.28.0",
  "httpx>=0.28.0",
  "httpx-sse>=0.4.0",
]

[project.scripts]
lightrag-fastmcp = "lightrag_fastmcp_bridge.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
